Source/TestApp/LinkWrap.cs

// This file is machine generated by LDFUTIL V2_022
// Processed in Mode: 11 - C-Sharp Export stubs Mode V2
// It should not be directly edited.

//Lead-in code from LWPart1.CS ----------------------------------
//If viewing in MENUDELEGATES.CS, do not edit! This code is pasted there from LWPart1.CS by LDFUTIL.
using System;
using System.Collections.Generic;
using System.ComponentModel;
using System.Data;
using System.Drawing;
using System.Runtime.InteropServices;
using System.Linq;
using System.Text;
using System.Threading.Tasks;
using System.Windows.Forms;
using API_STAT = System.UInt32;
using API_DEVICE_HANDLE = System.IntPtr;
using U32 = System.UInt32;
using U16 = System.UInt16;
using U8 = System.Byte;
using UP_PTR_FLOAT = System.Single;
using DOWN_PTR_FLOAT = System.Single;
using DOWN_PTR_U32 = System.UInt32;
using UP_PTR_U32 = System.UInt32;
using DOWN_PTR_U16 = System.UInt16;
using UP_PTR_U16 = System.UInt16;
using DOWN_PTR_U8 = System.Byte;
using UP_PTR_U8 = System.Byte;

namespace TestApp
{
    public partial class Form1 : Form
    {
		//Constants relating to Menu Utility
		public const U16 HIDEMENU				= 1;
		public const U16 RTNVAL					= 2;
		public const U16 RTNVAL2				= 4;
		public const U16 MEN_STARTUP			= 64;
		
		//Constants relating to standard link functions
		public const U16 RESTART_MAGIC_ONE 		= 0xA5A5;
		public const U16 RESTART_MAGIC_TWO 		= 0x1234;
		public const U32 SSP_CS_START				= 1002;
		public const U32 SSP_CS_END					= 1003;
		public const U32 SSP_CS_CALC				= 1004;
	
		//HID related defines
//		public const U16 BIORAD_VID				= 0x0614;
//		public const U16 FRACTION_COLLECTOR_PID	= 0x040E;
		public const U16 OUR_VID				= 0x0614;
		public const U16 OUR_PID	= 0x040E;
		

		enum SLAVE_PARAMS {SPAR_PROGVERSION = 0, SPAR_MSECS = 6}; //from slavparm.h
		public enum API_RSLT:int {
  								LINK_RSLT_OK = 0, OK=0, PARAM_OUT_OF_RANGE, RET_VALUE_OUT_OF_RANGE,
								FW_FILE_DATA_CRC_ERROR, MAIN_FW_KEY_ERASE_ERROR, FW_UPGRADE_ERROR,
								INSTR_NOT_FOUND, NULL_PTR, OP_NOT_ALLOWED, COMM_BAD_CALL,
								COMM_BAD_SEND, COMM_BAD_LT_CALL, COMM_RESP_TIMEOUT, COMM_BAD_RESP,
								COMM_SLAVE_STATUS, COMM_BAD_RTN_IDX, COMM_BAD_CMN_CHN, COMM_UNEXP_RESP,
								COMM_BAD_ERR_CODE, COMM_CLOSE_FAIL, FC_DEVICES_WITH_SAME_SERIAL_NUMBER,
								DEVICE_HANDLE_INVALID, INVALID_NO_OF_ACTIVE_FC_DEVICES, MORE_THEN_ONE_DEVICE_CONNECTED,
								FW_COMPONENT_NOT_FOUND, FW_COMPONENT_BAD_PID, FW_COMPONENT_BAD,
								FW_WITH_BOOT_LOADER_ONLY, BAD_API_HANDLE
							
						   };

//End Lead-in code file LWPart1.CS ---------------------------

		private U8 MasterBlockDown(DOWN_PTR_U8[] SrcPtr, U8 Count, U16 DestAddress)
		{
			return LINK.MasterBlockDown(CMgr.CurHandle(), SrcPtr, Count, DestAddress);
		}

		private U8 MasterBlockUp(U16 SrcAddress, UP_PTR_U8[] DestPtr, U8 Count)
		{
			return LINK.MasterBlockUp(CMgr.CurHandle(), SrcAddress, DestPtr, Count);
		}

		private U32 GetSlaveParameter(U8 ParCode, U8 Index)
		{
			return LINK.GetSlaveParameter(CMgr.CurHandle(), ParCode, Index);
		}

		private U32 SetSlaveParameter(U8 ParCode, U16 Param1, U16 Param2)
		{
			return LINK.SetSlaveParameter(CMgr.CurHandle(), ParCode, Param1, Param2);
		}

		private U8 SetServoUsec(U8 ServoIndex, U16 Usec)
		{
			return LINK.SetServoUsec(CMgr.CurHandle(), ServoIndex, Usec);
		}

		private U16 GetServoUsec(U8 ServoIndex)
		{
			return LINK.GetServoUsec(CMgr.CurHandle(), ServoIndex);
		}

		private U8 DataUpdate(DOWN_PTR_U16[] UsecsPtr, U8 UsecCount, UP_PTR_U16[] ADValsPtr, U8 ADValCount)
		{
			return LINK.DataUpdate(CMgr.CurHandle(), UsecsPtr, UsecCount, ADValsPtr, ADValCount);
		}

		private U8 SetSolenoid(U8 SolIndex, U8 Value)
		{
			return LINK.SetSolenoid(CMgr.CurHandle(), SolIndex, Value);
		}

		private void ServoSlewMove(U8 ServoIndex, U16 UsecTarget, float Velocity)
		{
			LINK.ServoSlewMove(CMgr.CurHandle(), ServoIndex, UsecTarget, Velocity);
		}

		private void SetStep(U8 StepperIndex, U16 PeriodCount, U16 Steps, U8 Dir)
		{
			LINK.SetStep(CMgr.CurHandle(), StepperIndex, PeriodCount, Steps, Dir);
		}

		private void ProgramEEPROM(U16 Address, U8 Value)
		{
			LINK.ProgramEEPROM(CMgr.CurHandle(), Address, Value);
		}

		private U8 ReadEEPROM(U16 Address)
		{
			return LINK.ReadEEPROM(CMgr.CurHandle(), Address);
		}

		private U8 ReadTraceBuffer(UP_PTR_U8[] TraceValsPtr, U8 TraceValCount)
		{
			return LINK.ReadTraceBuffer(CMgr.CurHandle(), TraceValsPtr, TraceValCount);
		}

		private U8 SetPWMVal(U8 ServoIndex, U16 Count)
		{
			return LINK.SetPWMVal(CMgr.CurHandle(), ServoIndex, Count);
		}

		private U16 SetPWMFreq(U8 ChipIndex, U16 FreqX10)
		{
			return LINK.SetPWMFreq(CMgr.CurHandle(), ChipIndex, FreqX10);
		}

		private U8 ServoUpdate(DOWN_PTR_U16[] UsecsPtr, U8 UsecCount, U8 GroupIndex)
		{
			return LINK.ServoUpdate(CMgr.CurHandle(), UsecsPtr, UsecCount, GroupIndex);
		}

		private void LoadServoUsec(U8 ServoIndex, U16 Usec)
		{
			LINK.LoadServoUsec(CMgr.CurHandle(), ServoIndex, Usec);
		}

		static class LINK
		{
			[DllImport(@".\PPBAPI.dll")]
			public static extern U8 MasterBlockDown(API_DEVICE_HANDLE Handle, DOWN_PTR_U8[] SrcPtr, U8 Count, U16 DestAddress);
			[DllImport(@".\PPBAPI.dll")]
			public static extern U8 MasterBlockUp(API_DEVICE_HANDLE Handle, U16 SrcAddress, UP_PTR_U8[] DestPtr, U8 Count);
			[DllImport(@".\PPBAPI.dll")]
			public static extern U32 GetSlaveParameter(API_DEVICE_HANDLE Handle, U8 ParCode, U8 Index);
			[DllImport(@".\PPBAPI.dll")]
			public static extern U32 SetSlaveParameter(API_DEVICE_HANDLE Handle, U8 ParCode, U16 Param1, U16 Param2);
			[DllImport(@".\PPBAPI.dll")]
			public static extern U8 SetServoUsec(API_DEVICE_HANDLE Handle, U8 ServoIndex, U16 Usec);
			[DllImport(@".\PPBAPI.dll")]
			public static extern U16 GetServoUsec(API_DEVICE_HANDLE Handle, U8 ServoIndex);
			[DllImport(@".\PPBAPI.dll")]
			public static extern U8 DataUpdate(API_DEVICE_HANDLE Handle, DOWN_PTR_U16[] UsecsPtr, U8 UsecCount, UP_PTR_U16[] ADValsPtr, U8 ADValCount);
			[DllImport(@".\PPBAPI.dll")]
			public static extern U8 SetSolenoid(API_DEVICE_HANDLE Handle, U8 SolIndex, U8 Value);
			[DllImport(@".\PPBAPI.dll")]
			public static extern void ServoSlewMove(API_DEVICE_HANDLE Handle, U8 ServoIndex, U16 UsecTarget, float Velocity);
			[DllImport(@".\PPBAPI.dll")]
			public static extern void SetStep(API_DEVICE_HANDLE Handle, U8 StepperIndex, U16 PeriodCount, U16 Steps, U8 Dir);
			[DllImport(@".\PPBAPI.dll")]
			public static extern void ProgramEEPROM(API_DEVICE_HANDLE Handle, U16 Address, U8 Value);
			[DllImport(@".\PPBAPI.dll")]
			public static extern U8 ReadEEPROM(API_DEVICE_HANDLE Handle, U16 Address);
			[DllImport(@".\PPBAPI.dll")]
			public static extern U8 ReadTraceBuffer(API_DEVICE_HANDLE Handle, UP_PTR_U8[] TraceValsPtr, U8 TraceValCount);
			[DllImport(@".\PPBAPI.dll")]
			public static extern U8 SetPWMVal(API_DEVICE_HANDLE Handle, U8 ServoIndex, U16 Count);
			[DllImport(@".\PPBAPI.dll")]
			public static extern U16 SetPWMFreq(API_DEVICE_HANDLE Handle, U8 ChipIndex, U16 FreqX10);
			[DllImport(@".\PPBAPI.dll")]
			public static extern U8 ServoUpdate(API_DEVICE_HANDLE Handle, DOWN_PTR_U16[] UsecsPtr, U8 UsecCount, U8 GroupIndex);
			[DllImport(@".\PPBAPI.dll")]
			public static extern void LoadServoUsec(API_DEVICE_HANDLE Handle, U8 ServoIndex, U16 Usec);
		}
	}
}
